完善了下样式

--- a/src/components/card/index.scss
+++ b/src/components/card/index.scss
@@ -1,7 +1,7 @@
 .card-item {
   width: 300px;
   height: 180px;
-  background-color: aquamarine;
+  background-color: rgb(45, 183, 245,.5);
   border-radius: 50px;
   margin: 10px 10px;
   position: relative;
